need to fix spacing bootstrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-.header ul li {
+/* .header ul li {
 align-items: flex-end;
 float: left;
 
@@ -10,5 +10,14 @@ height: 50px;
 width: 30px;
 border: 6px solid black;
 
-};
+}; */
 
+.mt-5 {
+    margin-top: ($spacer * 40) !important;
+  }
+
+.hgt {
+min-height: 50vh;
+min-width: 70vw;
+}
+  
